fixed damage on enemy on jumping upwards

--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ body{
     align-items: center;
     background-image: url('img/10_background/desert.jpg');
     background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #1B1136;
 }
 
 h1{
